Some documentation files added. A #include directive added to src/test.cpp in order to compile in some platforms

--- a/docs/fuzzylite-1.5.tex
+++ b/docs/fuzzylite-1.5.tex
@@ -29,7 +29,7 @@
 \usepackage{palatino}
 
 \hypersetup{
-   	pdftitle={FuzzyLite v1.02: A Fuzzy Inference System written in C++},
+   	pdftitle={FuzzyLite v1.5: A Fuzzy Logic Control Library written in C++},
    	pdfauthor={Juan Rada-Vilela},
    	pdfkeywords={fuzzylite, fuzzy-lite, Fuzzy Logic, Fuzzy Inference System},
    	pdfborder={000},
@@ -40,16 +40,16 @@
    	urlcolor=blue
 }
 
-\newcommand{\fl}{\texttt{FuzzyLite v1.02}}
+\newcommand{\fl}{\texttt{FuzzyLite v1.5}}
 
 \renewcommand{\footrulewidth}{0.4pt} 
 
 
 
 \begin{document}
-	\title{\fl\\A Fuzzy Inference System written in \texttt{C++}}
-	\author{by Juan Rada-Vilela\\ \footnotesize Supported by the Foundation for the Advancement of Soft Computing}
-	\date{September, 2010}
+	\title{\fl\\ A Fuzzy Logic Control Library written in \texttt{C++}}
+	\author{by Juan Rada-Vilela}
+	\date{August, 2012}
 	
 	\maketitle
 	\setcounter{tocdepth}{4}
@@ -58,7 +58,7 @@
 	\listoffigures
 	\pagestyle{fancy}	
 
-	\rfoot{\footnotesize\url{http://code.google.com/p/fuzzy-lite/}}
+	\rfoot{\footnotesize\url{http://code.google.com/p/fuzzylite/}}
 	\input{./overview.tex}
 	\input{./model.tex}
 	\input{./examples.tex}
