Working on Configuration at UI

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-Test hedge Any 
+Add ui for hedges
 Add new exporters/importers to qtfuzzylite
 R Exporter to draw surfaces and the things that octave does.
+pyfuzzylite exporter
 
