Adjustments for cross-platform

--- a/fuzzylite/TODO
+++ b/fuzzylite/TODO
@@ -1,4 +1,5 @@
 Throw exception on Importers when text is empty.
+on windows, cmakelists -werror and others.
 Add new exporters/importers to qtfuzzylite
 R Exporter to draw surfaces and the things that octave does.
 pyfuzzylite exporter
