--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -1,1 +1,4 @@
-
+Add missing items in menu for Windows and Linux
+Change page size of divisions
+Change font size of fuzzy label in Viewer (too small in Windows)
+Disable help ? from About, ImEx, Term, Preferences
