--- a/fuzzylite/TODO
+++ b/fuzzylite/TODO
@@ -1,5 +1,6 @@
 Throw exception on Importers when text is empty.
 on windows, cmakelists -werror and others.
+on windows, hyperbolic functions in infix and log1p
 Add new exporters/importers to qtfuzzylite
 R Exporter to draw surfaces and the things that octave does.
 pyfuzzylite exporter
