Takagi-Sugeno rules implemented and tested with Constants. Unified Mamdani Rules into FuzzyRules. Made changes to qtfuzzylite and fuzzylite to reflect FuzzyRules.

--- a/fuzzylite/TODO
+++ b/fuzzylite/TODO
@@ -2,6 +2,9 @@ on windows, hyperbolic functions in infix and log1p
 Add new exporters/importers to qtfuzzylite
 R Exporter to draw surfaces and the things that octave does.
 pyfuzzylite exporter
-Weighted Average
-Weighted Sum
-TS: ax+by+c
+
+Test Linear with TS Rules
+Implement Custom function
+Add importers and exporters the TS rules
+Parse the new terms and add them to the Factory
+
