--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -1,12 +1,5 @@
 Cache background on QGraphicsView. It should improve performance a lot.
-Add viewers next to the inputs and outputs in Window
 
-
-QSlider::handle:horizontal {
-image: url(:/icons/1uparrow.png);
-padding-left: -4px; padding-right: -4px;
- border: 1px solid #5c5c5c;
-border-radius: 8px;
-}
+Add save to file and determine extension at runtime
 
 
