--- a/webfuzzylite/main.wiki
+++ b/webfuzzylite/main.wiki
@@ -1,28 +1,32 @@
-#summary A Fuzzy Logic Control Library written in C++
+#summary A Fuzzy Logic Control Library and Application in C++
 
 == Donations ==
-Please consider making a *donation* to support these projects.
-There are still many things to do!
+Please, consider making a *donation* to support these projects.
+There are still _many_ things to do!
 
 <div style="text-align: center;">
 || *NZD* || [http://www.fuzzylite.com/donation.php?generosity=low 1$] || [http://www.fuzzylite.com/donation.php?generosity=Low 2$] || [http://www.fuzzylite.com/donation.php?generosity=LOW 5$] || [http://www.fuzzylite.com/donation.php?generosity=medium 10$] || [http://www.fuzzylite.com/donation.php?generosity=Medium 20$] || [http://www.fuzzylite.com/donation.php?generosity=MEDIUM 50$] || [http://www.fuzzylite.com/donation.php?generosity=high 100$] || [http://www.fuzzylite.com/donation.php?generosity=High 200$] || [http://www.fuzzylite.com/donation.php?generosity=HIGH 500$] ||
 || *Generosity* ||  [http://www.fuzzylite.com/donation.php?generosity=low low ] || [http://www.fuzzylite.com/donation.php?generosity=Low Low ] || [http://www.fuzzylite.com/donation.php?generosity=LOW LOW ] || [http://www.fuzzylite.com/donation.php?generosity=medium med ] || [http://www.fuzzylite.com/donation.php?generosity=Medium Med ] || [http://www.fuzzylite.com/donation.php?generosity=MEDIUM MED ] || [http://www.fuzzylite.com/donation.php?generosity=high high ] || [http://www.fuzzylite.com/donation.php?generosity=High High ] || [http://www.fuzzylite.com/donation.php?generosity=HIGH HIGH ] || https://www.paypal.com/en_US/i/logo/PayPal_mark_37x23.gif ||
 </div>
 
+... and please, let us all give a standing ovation to the *[#Donors Donors]*.
 
-
-== Current Version: 2.0 (February/2013) ==
-Developed by Juan Rada-Vilela, jcrada@fuzzylite.com
-
-http://www.fuzzylite.com/jcrada
 
 === News ===
 
-== Version 2.0 released (February/2013) ==
+30/05/2013: Join the *`fuzzylite`* !LinkedIn [http://www.linkedin.com/groups/fuzzylite-5043005?trk=myg_ugrp_ovr group]
+
+== Current Version: 2.0 (February/2013) ==
 
 I have rewritten *`fuzzylite`* and *`qtfuzzylite`* from the ground up, incorporating *MANY* new features, taking much more care coding, and using the experience gained over the past years. Also, I have configured a !PayPal account hoping to receive *donations* and be able to provide more maintainance and keep updating both projects much more frequently.
 
-I do hope you enjoy this version as much as I did working on it during my free time!
+I do hope that you enjoy this version as much as I did working on it during my free time!
+
+Sincerely yours,
+
+*Juan Rada-Vilela*<br>
+[mailto:jcrada@fuzzylite.com jcrada@fuzzylite.com]<br>
+http://www.fuzzylite.com/jcrada  
 
 = Introduction =
 
@@ -32,79 +36,85 @@ I do hope you enjoy this version as much as I did working on it during my free t
 
 If you are going to cite this library in your article, please do so as:
 
-Juan Rada-Vilela. fuzzylite: A fuzzy logic control library written in C++, 2013. URL http://www.fuzzylite.com.
+Juan Rada-Vilela. fuzzylite: A fuzzy logic control library in C++, 2013. URL http://www.fuzzylite.com.
 
 <code language="bib">
 @misc{fl::fuzzylite,
 author={Juan Rada-Vilela},
-title={fuzzylite: A fuzzy logic control library written in \texttt{C++}},
+title={fuzzylite: A fuzzy logic control library in C++},
 url={http://www.fuzzylite.com},
 year={2013}
 }</code>
 
 
+Additionally, check the list of *[#Applications Applications]* and *[#Publications Publications]* using *`fuzzylite`*
+
 
 = License =
 *`fuzzylite`* is licensed under the [http://www.apache.org/licenses/LICENSE-2.0.html Apache License 2.0]
 
-*`qtfuzzylite`* is licensed under the [http://www.gnu.org/licenses/gpl.html GNU General Public License]
+*`qtfuzzylite`* is licensed under the [http://www.gnu.org/licenses/gpl.html GNU General Public License 3.0]
 
 = Features =
-  * Over a dozen of linguistic terms to choose from (e.g. triangle, trapezoid, discrete, gaussian, bell, pi-shape, ramp, sigmoid, s-shape, z-shape, and more)
-  * Over a dozen fuzzy logic operators (e.g. algebraic, drastic, Einstein's and Hamacher's products and sums, and others) to be used as T-Norms, S-Norms, activation and accumulation
-  * Centroid and Maximum (smallest, mean and largest) defuzzifiers
-  * No need to worry about an integration algorithm, this time only one is included and works!
-  * Hedges any, not, extremely, seldom, somewhat, very
-  * Engines are allowed to have multiple ruleblocks containing any number of (possibly weighted) rules, and different T-norms, S-norms, and activation operators
-  * Mamdani rules are written just naturally (e.g. "`if AmbientLight is LOW then BulbPower is LOW`")
-  * Output variables can return default values or the last valid value whenever defuzzification is out of range or empty, thus ensuring the output at every moment
-  * Import to *`fuzzylite`* your fuzzy engines created with Octave or Matlab (`.fis` files)
-  * ... or export your *`fuzzylite`* engines to `.fis` format to be used in Octave or Matlab
-  * Import and export from and to the Fuzzy Controller Language (FCL) specification
-  * Plus, the object-oriented approach taken allows you to easily extend every component of *`fuzzylite`* to create your own and be used seamlessly
-  * Besides these core features, a dozen of examples from Octave, Matlab, and ours are included in `fcl` and `fis` format, as well as in *`fuzzylite`* `C++`
-  * CMake scripts make life easy to build *`fuzzylite`* and *`qtfuzzylite`* from source in Linux, Mac, and Windows (natively using MSVC)
-  * Binaries are provided in the Downloads page for the following  platforms: Ubuntu, MacOSX and Windows
+  * Linguistic terms: triangle, trapezoid, rectangle, discrete, gaussian, gaussian product, bell, pi-shape, sigmoid difference, sigmoid product, ramp, sigmoid, s-shape, z-shape, and you can create more
+  * T-norms and activation operators: minimum, algebraic product, bounded difference, drastic product, einstein product, hamacher product, and you can create more
+  * T-conorms and accumulation operators: maximum, algebraic sum, bounded sum, normalized sum, drastic sum, einstein sum, hamacher sum, and you can create more
+  * Defuzzifiers: centroid, smallest of maximum, largest of maximum, mean of maximum, and you can create more
+  * Hedges: any, not, extremely, seldom, somewhat, very, and you can create more.
+  * Extend every component of *`fuzzylite`* and use it seamlessly thanks to the neat object-oriented approach 
+  * Import your fuzzy engines from Octave or Matlab using the `fis` format
+  * Export your *`fuzzylite`* engines to the `.fis` format and use them in Octave or Matlab
+  * Import and export using the Fuzzy Controller Language (FCL) specification
+  * Use multiple ruleblocks within an engine, each containing any number of (possibly weighted) rules, and different T-norms, T-conorms, and activation operators
+  * Write Mamdani rules just naturally e.g. "`if Ambient is DARK then BulbPower is HIGH`"
+  * Return a default value or the last known valid one in output variables when no rules are activated
+  * Play with over a dozen of examples from Octave, Matlab, and ours included in `fcl` and `fis` format, and also in *`fuzzylite`* C++
+  * Easily build from sources using the CMake scripts to build *`fuzzylite`* and *`qtfuzzylite`*  in Linux, Mac, and Windows (natively using MSVC)
+  * Download the binaries in the [http://http://code.google.com/p/fuzzylite/downloads/ Downloads] page for the following platforms: Ubuntu, Mac OSX and Windows
 
 
 = Example =
 <code language="cpp">
 fl::Engine* engine = new fl::Engine("simple-dimmer");
 
-fl::InputVariable* ambientLight = new fl::InputVariable;
-ambientLight->setName("AmbientLight");
-ambientLight->setRange(0.000, 1.000);
+ fl::InputVariable* ambient = new fl::InputVariable;
+ambient->setName("Ambient");
+ambient->setRange(0.000, 1.000);
 
-ambientLight->addTerm(new fl::Triangle("LOW", 0.000, 0.250, 0.500));
-ambientLight->addTerm(new fl::Triangle("MEDIUM", 0.250, 0.500, 0.750));
-ambientLight->addTerm(new fl::Triangle("HIGH", 0.500, 0.750, 1.000));
-engine->addInputVariable(ambientLight);
+ ambient->addTerm(new fl::Triangle("DARK", 0.000, 0.250, 0.500));
+ambient->addTerm(new fl::Triangle("MEDIUM", 0.250, 0.500, 0.750));
+ambient->addTerm(new fl::Triangle("BRIGHT", 0.500, 0.750, 1.000));
+engine->addInputVariable(ambient);
 
-fl::OutputVariable* bulbPower = new fl::OutputVariable;
+ fl::OutputVariable* bulbPower = new fl::OutputVariable;
 bulbPower->setName("BulbPower");
 bulbPower->setRange(0.000, 2.000);
 bulbPower->setDefaultValue(0);
 
-bulbPower->addTerm(new fl::Triangle("LOW", 0.000, 0.500, .000));
+ bulbPower->addTerm(new fl::Triangle("LOW", 0.000, 0.500, 1.000));
 bulbPower->addTerm(new fl::Triangle("MEDIUM", 0.500, 1.000, 1.500));
 bulbPower->addTerm(new fl::Triangle("HIGH", 1.000, 1.500, 2.000));
 engine->addOutputVariable(bulbPower);
 
-fl::RuleBlock* ruleblock = new fl::RuleBlock;
-ruleblock->addRule(fl::MamdaniRule::parse("if AmbientLight is LOW then BulbPower is LOW", engine));
-ruleblock->addRule(fl::MamdaniRule::parse("if AmbientLight is MEDIUM then BulbPower is MEDIUM", engine));
-ruleblock->addRule(fl::MamdaniRule::parse("if AmbientLight is HIGH then BulbPower is HIGH", engine));
+ fl::RuleBlock* ruleblock = new fl::RuleBlock;
+ruleblock->addRule(fl::MamdaniRule::parse("if Ambient is DARK then BulbPower is HIGH", engine));
+ruleblock->addRule(fl::MamdaniRule::parse("if Ambient is MEDIUM then BulbPower is MEDIUM", engine));
+ruleblock->addRule(fl::MamdaniRule::parse("if Ambient is BRIGHT then BulbPower is LOW", engine));
 engine->addRuleBlock(ruleblock);
 
-engine->configure("Minimum", "Maximum", "AlgebraicProduct", "AlgebraicSum", "Centroid");</code>
+ engine->configure("Minimum", "Maximum", "AlgebraicProduct", "AlgebraicSum", "Centroid");</code>
 
-An example of *`fuzzylite-1.x`* working in real-time:
+Watch a tutorial on *`qtfuzzylite`*:
+
+<wiki:video url="http://www.youtube.com/watch?v=8UQghVz8N9A"/>
+
+... and an example of *`fuzzylite-1.x`* working in real-time:
 
 <wiki:video url="http://www.youtube.com/watch?v=YOKk8G_5aRA"/>
 
 
 = What's next? =
-  * Takagi-sugeno rules
+  * Takagi-Sugeno rules
   * Documentation using Doxygen
   * R Exporters to generate the surface of each output based on the inputs
   * Develop the Adaptive Neuro-Fuzzy Inference System (ANFIS)
@@ -166,8 +176,8 @@ Building from source requires you to have CMake installed. Once installed, it is
   cmake . -G "NMake Makefiles"
   nmake</code>
 
-  The instructions above will produce the following files. `libfuzzylite.(so|dylib|dll)` which is the shared library. `libfuzzylite.(a|lib)` which is the static library to build stand-alone applications. `fuzzylite-demo(.exe)` an executable  of a simple console demo application using *`fuzzylite`* as a shared library. `qtfuzzylite(.app|.exe)` the graphic user interface using *`fuzzylite`* as a shared library.
-  The extensions of the output files depend on the platform. Specifically, `.so|.a` in Linux, `.dylib|.a` in Mac, `.dll|.lib` in Windows. Notice that, on Windows, the libraries must be placed manually in the same folder of the executable file. Also, the library `dbghelp` is used on Windows to retrieve the backtrace in case of errors, but such a library should be included by default on your Windows distribution.
+  The instructions above will produce the following files. `libfuzzylite.(so|dylib|dll)` which is the shared library. `libfuzzylite-static.(a|lib)` which is the static library to build stand-alone applications. `fuzzylite-demo(.exe)` an executable  of a simple console demo application using *`fuzzylite`* as a shared library. `qtfuzzylite(.app|.exe)` the graphic user interface using *`fuzzylite`* as a shared library.
+  The extensions of the output files depend on the platform. Specifically, `.so|.a` in Linux, `.dylib|.a` in Mac, `.dll|.lib` in Windows. Notice that, on Windows, the libraries must be placed manually in the same folder of the executable file. Also, the library `dbghelp` is used on Windows to retrieve the backtrace in case of errors, but such a library should be included by default in your Windows distribution.
 
   Furthermore, the following additional building flags can be set upon executing `cmake`, either to build *`fuzzylite`* or *`qtfuzzylite`*, just remember to use the same flags in both.
 
@@ -178,9 +188,9 @@ Building from source requires you to have CMake installed. Once installed, it is
   * `-DFL_DECIMALS=y`  defines `y` as the number of decimals to use when printing floating-point numbers to console and files (`y` defaults to `3`)
 
 = Acknowledgements =
-	This version was the product of using my free time to relax myself from my current PhD studies, but also to flirt with the possibility of making a living out of open source software. Therefore, if you find this library useful and you do have the resources, please _seriously_ consider making a *donation* to support these projects. Thank you *very* much!
+	This version was the product of using my free time to relax from my current PhD studies, for which I am earning less than minimum wage to support myself. Therefore, if you find this library useful and you do have the resources, please _seriously_ consider making a *donation* to support these projects. Thank you *very* much!
 
-	Also, very important has been the feedback I have had over the past years from the community. All the suggestions and critics have really helped me to identify problems and improve the library in general. Thank you *very* much to all of you for your great support.
+	Very important has been the feedback I have had over the past years from the community. All the suggestions and critics have really helped me to identify problems and improve the library in general. Thank you *very* much to all of you for your great support.
 
 	Previous versions of this work were possible thanks to the Foundation for the Advancement of Soft Computing, to the Master of Soft Computing and Intelligent Data Analysis at the European Centre for Soft Computing, and especially to Sergio Guadarrama and Luis Magdalena for their support.
 
@@ -191,7 +201,7 @@ Ubuntu
 
 http://fuzzylite.googlecode.com/git/webfuzzylite/ubuntu.png
 
-MacOSX
+Mac OSX
 
 http://fuzzylite.googlecode.com/git/webfuzzylite/macosx.png
 
@@ -199,3 +209,32 @@ Windows
 
 http://fuzzylite.googlecode.com/git/webfuzzylite/Windows.png
 
+
+= Applications =
+
+*`fuzzylite`* has been utilized in the following applications:
+
+  # *[http://www.fuzzylite.com qtfuzzylite]*: A Fuzzy Logic Control Application in C++
+
+
+If you want your application to appear in this list, please [mailto:jcrada@fuzzylite.com email] me the name of your application, URL, and a very brief summary (max. 20 words). If your application is not free, please make a donation.
+
+
+= Publications =
+
+*`fuzzylite`* has been utilized in the following publications:
+
+  #
+
+If you want your publication to appear in this list, please [mailto:jcrada@fuzzylite.com email] me your citation as "Authors. Publication title. Conference or Journal. Year. URL."
+
+
+
+
+= Donors =
+
+Please, let us all give a standing ovation to:
+
+  # *[http://www.internetone.it InternetONE.it]*
+
+If you wish to appear in this list, please make a donation :)
