Introduced templates in Discrete, Linear, and str functions. Changed Exporters accordingly.

--- a/webfuzzylite/main.wiki
+++ b/webfuzzylite/main.wiki
@@ -1,4 +1,5 @@
 #summary A Fuzzy Logic Control Library and Application in C++
+Last updated: 01/June/2013
 
 == Donations ==
 Please, consider making a *donation* to support these projects.
@@ -236,5 +237,6 @@ If you want your publication to appear in this list, please [mailto:jcrada@fuzzy
 Please, let us all give a standing ovation to:
 
   # *[http://www.internetone.it InternetONE.it]*
+  # *[http://www.xgen.com.br XGEN]*
 
 If you wish to appear in this list, please make a donation :)
