--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -3,3 +3,6 @@ Cache background on QGraphicsView. It should improve performance a lot.
 Add save to file and determine extension at runtime
 
 
+Decimals 2 everywhere
+Fix drawing of TS
+Fix sizing of ins and outs
