--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -2,7 +2,13 @@ Cache background on QGraphicsView. It should improve performance a lot.
 
 Fix defuzzifiers in OutputVariables.
 
+Properties of files
+
+minimize/maximize all
+
 Associate files
-Accept file at open
 Preferences: Line thickness, gradients, show centroids and guides, 
              default resolution, default divisions, 
+
+
+
